# Lab2_TC

./: CMakeLists.txt  README.md  datos.txt  main.cpp
Parte 3- Shuting yarn/: CMakeLists.txt  datos.txt  main.cpp
